# dbt-helpers

./: .bandit  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  noxfile.py  pyproject.toml  requirements.setup.txt
.claude/: README.md  settings.json
.claude/agents/: path-architect.md  plugin-engineer.md  quality-verifier.md  schema-specialist.md  sdk-architect.md
.github/workflows/: publish.yml  test-publish.yml  test.yml
.trunk/: trunk.yaml
dev/: setup.sh  test_python.sh
docs/: ROADMAP.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-plugin-based-hexagonal-architecture.md  0003-use-plan-api-for-safe-file-operations.md  0004-decoupled-dbt-property-version-adapters.md  0005-catalog-metadata-extension.md  0006-nullable-infrastructure-testing-strategy.md  0007-categorized-plugin-directory-structure.md  0008-agent-driven-development-specialized-skills.md  0009-monorepo-test-and-makefile-organization.md  0010-plugin-level-docker-integration-testing.md  0011-path-policy-and-state-building.md  0012-centralized-agent-and-skill-documentation.md  0013-cli-source-import-and-model-scaffold.md  0014-modular-cli-command-structure.md  0015-standardize-on-unittest-testcase.md  0016-integration-testing-for-source-import.md  0017-standardize-on-unittest-testcase-for-integration.md  0018-standardize-env-switching-with-dbt-vars.md  0019-safe-file-operations-and-yaml-patching.md  0020-sync-and-scaffold-strategy.md  0021-use-jinja2-for-dbt-resource-generation.md  0022-bigquery-authentication-and-impersonation-support.md  0023-data-privacy-and-pii-tagging-tool-plugin.md  0024-resource-oriented-service-decomposition.md  README.md  (+14 more)
src/dbt_helpers_cli/: pyproject.toml
src/dbt_helpers_cli/src/dbt_helpers_cli/: main.py  utils.py
src/dbt_helpers_cli/src/dbt_helpers_cli/commands/: model.py  snapshot.py  source.py
src/dbt_helpers_cli/tests/unit/: test_main.py
src/dbt_helpers_core/: pyproject.toml
src/dbt_helpers_core/src/dbt_helpers_core/: config.py  orchestrator.py  path_policy.py  plugin_discovery.py  resource_mapper.py  safe_fs_writer.py  state_builder.py  testing.py  yaml_store.py
src/dbt_helpers_core/src/dbt_helpers_core/workflows/: model_scaffold.py  snapshot_scaffold.py  source_sync.py
src/dbt_helpers_core/tests/unit/: test_config.py  test_orchestrator.py  test_path_policy.py  test_safe_fs_writer.py  test_state_builder.py  test_yaml_store.py
src/dbt_helpers_sdk/: pyproject.toml
src/dbt_helpers_sdk/src/dbt_helpers_sdk/: __init__.py  dbt_resource.py  interfaces.py  models.py  plan.py
src/dbt_helpers_sdk/src/dbt_helpers_sdk/testing/: __init__.py  runner.py  scenarios.py
src/dbt_helpers_sdk/tests/unit/: test_models.py
src/plugins/schemas/dbt_helpers_schema_dbt/: Makefile  pyproject.toml
src/plugins/schemas/dbt_helpers_schema_dbt/src/dbt_helpers_schema_dbt/: adapter.py  diff_engine.py
src/plugins/schemas/dbt_helpers_schema_dbt/src/dbt_helpers_schema_dbt/renderers/: base.py  model.py  snapshot.py  source.py
src/plugins/schemas/dbt_helpers_schema_dbt/src/dbt_helpers_schema_dbt/templates/: macros.jinja  model.sql.j2  model.yml.j2  model_doc.md.j2  snapshot.sql.j2  snapshot.yml.j2  source.yml.j2  source.yml.j2.tmp
src/plugins/schemas/dbt_helpers_schema_dbt/tests/unit/: test_adapter.py  test_diff_engine.py
src/plugins/schemas/dbt_helpers_schema_dbt/tests/unit/renderers/: test_model.py  test_snapshot.py  test_source.py
src/plugins/schemas/dbt_helpers_schema_fusion/: pyproject.toml
src/plugins/schemas/dbt_helpers_schema_fusion/src/dbt_helpers_schema_fusion/: __init__.py  adapter.py
src/plugins/warehouses/dbt_helpers_wh_bigquery/: Makefile  pyproject.toml
src/plugins/warehouses/dbt_helpers_wh_bigquery/src/dbt_helpers_wh_bigquery/: __init__.py  auth.py  plugin.py
src/plugins/warehouses/dbt_helpers_wh_bigquery/tests/: __init__.py
src/plugins/warehouses/dbt_helpers_wh_bigquery/tests/integration/: Dockerfile  __init__.py  conftest.py  test_data_types.py  test_plugin.py
src/plugins/warehouses/dbt_helpers_wh_bigquery/tests/integration/dbt_project/: dbt_project.yml  profiles.yml
src/plugins/warehouses/dbt_helpers_wh_bigquery/tests/integration/dbt_project/models/: all_types.sql
src/plugins/warehouses/dbt_helpers_wh_bigquery/tests/unit/: __init__.py  test_auth.py  test_plugin.py
src/plugins/warehouses/dbt_helpers_wh_duckdb/: dev.duckdb  noxfile.py  pyproject.toml
src/plugins/warehouses/dbt_helpers_wh_duckdb/src/dbt_helpers_wh_duckdb/: plugin.py
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/: .dockerignore  Dockerfile  base.py  conftest.py  test_catalog.py  test_catalog_enhanced.py  test_complex_types.py  test_idempotency.py  test_jaffle_shop_sync.py  test_multi_schema.py  test_project_vars_integration.py  test_realistic_projects.py  test_scaffold.py  test_source_import.py  test_sync.py  test_sync_scenarios.py
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/fixtures/jaffle_shop/: dbt_project.yml
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/fixtures/jaffle_shop/models/: orders.sql
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/fixtures/jaffle_shop/models/staging/: stg_customers.sql  stg_orders.sql
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/fixtures/jaffle_shop/seeds/: raw_customers.csv  raw_orders.csv  raw_payments.csv
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/fixtures/sample_project/: dbt_project.yml  profiles.yml
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/fixtures/sample_project/models/: users.sql
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/golden/complex_types/: main__complex_model.yml
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/golden/multi_schema/: main__dim_users.yml  main_intermediate__int_users.yml  main_staging__stg_users.yml
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/integration/scenarios/: __init__.py  base.py
src/plugins/warehouses/dbt_helpers_wh_duckdb/tests/unit/: test_plugin.py  test_plugin_enhanced.py
tests/: test_dummy.py
(+17 files in other folders)
