[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  ".git",
  ".venv",
  ".mypy_cache",
  ".pytest_cache",
  ".github",
  ".trunk",
  "tests",
  "dev",
  "dist",
  ".python-version",
]

[tool.hatch.build.targets.wheel]
packages = ["src/your_package"]

[project]
name = "your-package"
version = "0.1.0"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
description = "A dbt artifacts parser in python"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "bandit>=1.8.3",
  "isort>=6.0.1",
  "ruff>=0.9.10",
  "mypy>=1.15.0",
  "pylint>=3.3.5",
]

[project.scripts]
