[project]
name = "dbt-helpers-core"
version = "0.1.0"
description = "Core orchestrator for dbt-helpers"
authors = [{ name = "yu-iskw" }]
requires-python = ">=3.10"
dependencies = [
  "dbt-helpers-sdk",
  "ruamel.yaml>=0.17.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_helpers_core"]

[tool.uv.sources]
dbt-helpers-sdk = { workspace = true }
