[project]
name = "dbt-helpers-sdk"
version = "0.1.0"
description = "SDK for dbt-helpers plugins"
authors = [{ name = "yu-iskw" }]
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0.0", "jinja2>=3.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_helpers_sdk"]
