[project]
name = "dbt-helpers-schema-dbt"
version = "0.1.0"
description = "Unified dbt schema adapter for dbt-helpers"
authors = [{ name = "yu-iskw" }]
requires-python = ">=3.10"
dependencies = ["dbt-helpers-sdk", "ruamel.yaml>=0.17.0"]

[project.entry-points."dbt_helpers.schema_plugins"]
dbt = "dbt_helpers_schema_dbt.adapter:UnifiedDbtSchemaAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_helpers_schema_dbt"]

[tool.uv.sources]
dbt-helpers-sdk = { workspace = true }
