[project]
name = "dbt-helpers-schema-fusion"
version = "0.1.0"
description = "dbt Fusion (SQLMesh) schema adapter for dbt-helpers"
authors = [{ name = "yu-iskw" }]
requires-python = ">=3.10"
dependencies = ["dbt-helpers-sdk", "ruamel.yaml>=0.17.0"]

[project.entry-points."dbt_helpers.schema_plugins"]
fusion = "dbt_helpers_schema_fusion.adapter:FusionSchemaAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_helpers_schema_fusion"]

[tool.uv.sources]
dbt-helpers-sdk = { workspace = true }
