[project]
name = "dbt-helpers-wh-bigquery"
version = "0.1.0"
description = "BigQuery warehouse plugin for dbt-helpers"
authors = [{ name = "yu-iskw" }]
requires-python = ">=3.10"
dependencies = [
  "dbt-helpers-sdk",
  "google-cloud-bigquery>=3.0.0",
  "google-auth>=2.0.0",
  "db-dtypes>=1.0.0",
]

[project.entry-points."dbt_helpers.warehouse_plugins"]
bigquery = "dbt_helpers_wh_bigquery.plugin:BigQueryWarehousePlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_helpers_wh_bigquery"]

[tool.uv.sources]
dbt-helpers-sdk = { workspace = true }
