[project]
name = "dbt-helpers-wh-duckdb"
version = "0.1.0"
description = "DuckDB warehouse plugin for dbt-helpers"
authors = [{ name = "yu-iskw" }]
requires-python = ">=3.10"
dependencies = ["dbt-helpers-sdk", "duckdb>=1.0.0"]

[project.entry-points."dbt_helpers.warehouse_plugins"]
duckdb = "dbt_helpers_wh_duckdb.plugin:DuckDBWarehousePlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_helpers_wh_duckdb"]

[tool.uv.sources]
dbt-helpers-sdk = { workspace = true }
